<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/home" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="always"
        android:title="@string/profile" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_category"
        app:showAsAction="ifRoom"
        android:title="@string/category"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="ifRoom"
        android:title="@string/cart"/>


    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

    <item
        android:id="@+id/privacy"
        android:icon="@drawable/ic_privacy_tip"
        android:title="@string/privacy"/>

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_baseline_help_24"
        app:showAsAction="ifRoom"
        android:title="@string/help" />
    </group>


</menu>